final work against #50. There is a little bug i can't fix and that is that labels in legend are cut off

--- a/mathmlcaneval-frontend/src/main/webapp/resources/css/styles.css
+++ b/mathmlcaneval-frontend/src/main/webapp/resources/css/styles.css
@@ -135,3 +135,8 @@ footer
 {
     margin-bottom: 5px;
 }
+
+.disable-word-wrap
+{
+    white-space: nowrap;
+}
